#14 Put some new Java features to use fixing old problems.